# ESP32-Based-Local-SNTP-Clock-Replacement-System

./: README.md
SNDP_server01/: CMakeLists.txt
SNDP_server01/main/: main.c
